--- a/MY_STYLE.css
+++ b/MY_STYLE.css
@@ -47,7 +47,8 @@ body {
   margin-top: 2%;
   margin-bottom: 2%;
   min-height: 30px;
-  border: 4px solid rgb(198, 86, 233);
+  border: 1px solid transparent;
+  border-bottom: 5px solid rgb(198, 86, 233);
   background-color: aliceblue;
   border-radius: 10px;
   padding: 10px;
