--- a/MY_STYLE.css
+++ b/MY_STYLE.css
@@ -54,6 +54,7 @@ body {
   padding: 10px;
   color: rgb(255, 0, 140);
   font-weight: bold;
+  box-shadow: 0px 7px 14px -7px black;
 }
 
 .form_title{
