--- a/MY_STYLE.css
+++ b/MY_STYLE.css
@@ -84,7 +84,7 @@ body {
   display: block;
   border: 0px;
   font-weight: 700;
-  box-shadow: 0px 0px 14px -7px #000000;
+  box-shadow: 0px 7px 14px -7px black;
   background-image: linear-gradient(45deg, #8c41a3 0%, rgb(165, 149, 236)  61%, #8c41a3  100%);
   cursor: pointer;
   user-select: none;
