--- a/MY_STYLE.css
+++ b/MY_STYLE.css
@@ -113,8 +113,10 @@ body {
 }
 .card{
   padding: 10px 20px 10px 20px;
-  background-image: linear-gradient(120deg, rgb(255, 123, 0), rgb(162, 0, 255));
+  background-image: linear-gradient(120deg, rgb(255, 123, 0), yellow);
   border-radius: 8px;
+  border-top: 2.5px solid white;
+  border-bottom: 2.5px solid white;	
   font-size: large;
   font-weight: bold;
   color: rgb(255, 255, 255);
